--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Angular2, TypeScript, System.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "node_modules/.bin/tsc -p . -w",
+    "start": "live-server --open=."
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/albatrosary/Angular2Typescript/issues"
   },
-  "homepage": "https://github.com/albatrosary/Angular2Typescript#readme"
+  "homepage": "https://github.com/albatrosary/Angular2Typescript#readme",
+  "dependencies": {
+    "angular2": "^2.0.0-alpha.46",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
+    "numeral": "^1.5.3",
+    "systemjs": "^0.19.6"
+  },
+  "devDependencies": {
+    "live-server": "^0.8.2",
+    "typescript": "^1.6.2"
+  }
 }
